--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,6 @@
 .bg-custom-hero {
   background-image: url("/62f60eb00055ce5a3580bd91559f9f94.gif");
 }
+.bg-custom-blog {
+  background-image: url("/75xT-331971070.gif");
+}
